# r_peak_detection

./: .gitignore  AGENTS.md  PROJECT_OVERVIEW.md  README.md  WORK_LOG.md  apply_filter.py  detect_r_peaks.py  find_best_hyperparameters.py  make_figure.py  make_r_peak_data.py  models.py  pyproject.toml  requirements.txt  run_inference.py  run_test.py  run_train.py  setup.py  visualize.py
.github/workflows/: ci.yml
src/r_peak_detection/: __init__.py  dataset.py  detect_r_peaks.py  run_inference.py  visualize.py
src/r_peak_detection/checkpoints/: __init__.py  r_peak_classifier_large_out1_16_out2_32_bs_32_dt_0.5.pth  r_peak_classifier_large_out1_16_out2_32_dt_0.5.pth  r_peak_classifier_large_out1_32_out2_64_bs_32_dt_0.5.pth  r_peak_classifier_large_out1_32_out2_64_hs_256_bs_32_dt_0.5.pth  r_peak_classifier_out_8_dt_0.5.pth
tests/: test_detect_r_peaks.py  test_visualize.py
