[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r_peak_detection"
version = "0.1.0"
description = "Command-line tools for detecting and visualizing ECG R-peaks."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Yue Zhao", email = "yuezhao@rochester.edu" },
]
dependencies = [
    "numpy==1.26.4",
    "scipy==1.14.1",
    "torch==2.5.1",
    "tqdm==4.66.5",
]

[project.optional-dependencies]
visualization = [
    "dash==2.18.1",
    "plotly==5.24.1",
    "plotly-resampler==0.11.0",
]
training = [
    "matplotlib==3.9.2",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
]

[project.scripts]
detect-r-peaks = "r_peak_detection.detect_r_peaks:main"
visualize-r-peaks = "r_peak_detection.visualize:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"r_peak_detection.checkpoints" = ["*.pth"]
